--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,15 +10,29 @@
         />
       </a>
       <nav class="header__navigation--desktop">
-        <ul>
-          <li>Studying program</li>
-          <li>About</li>
-          <li>Training options</li>
-          <li>Contacts</li>
-          <li>Consultation by phone</li>
+        <ul class="navigation__desktop">
+          <li class="navigation__desktop__item">
+            <a class="navigation__desktop__link" href="#program"
+              >Studying program</a
+            >
+          </li>
+          <li class="navigation__desktop__item">
+            <a class="navigation__desktop__link" href="#about">About</a>
+          </li>
+          <li class="navigation__desktop__item">
+            <a class="navigation__desktop__link" href="#guarantee"
+              >Training options</a
+            >
+          </li>
+          <li class="navigation__desktop__item">
+            <a class="navigation__desktop__link" href="#contacts">Contacts</a>
+          </li>
         </ul>
       </nav>
-      <div class="header__smallmenu">
+      <a class="navigation__desktop__link--button" href="#program"
+        >Consultation by chat</a
+      >
+      <div class="smallmenu">
         <a class="smallmenu__link open-menu" href="#">
           <svg class="smallmenu__icon">
             <use href="./images/icons/icons.svg#icon-burger"></use>
@@ -59,12 +73,10 @@
               <li class="navigation__item">
                 <a class="navigation__link" href="#contacts">Contacts</a>
               </li>
-              <li class="navigation__item">
-                <a class="navigation__link--button" href="#phone"
-                  >Consultation by chat</a
-                >
-              </li>
             </ul>
+            <a class="navigation__link--button" href="#phone"
+              >Consultation by chat</a
+            >
           </nav>
         </div>
       </div>
