--- a/src/partials/program.html
+++ b/src/partials/program.html
@@ -6,44 +6,60 @@
         <ul class="program__list">
           <li class="program__item">
             <h4 class="program__item__semester">1 SEMESTER</h4>
-            <h5 class="program__item__resource">Grammar</h5>
+            <div class="program__item__description">
+              <div class="program__item__resource">
+            <h5 class="program__item__title">Grammar</h5>
             <p class="program__item__details">
               Nouns & Articles </br> Adjectives & Adverb
-            </p>            
-            <h5 class="program__item__resource">Vocabulary</h5>
-            <p class="program__item__details">Family & Relations </br> People & Society</p>            
+            </p></div> 
+            <div class="program__item__resource">           
+            <h5 class="program__item__title">Vocabulary</h5>
+            <p class="program__item__details">Family & Relations </br> People & Society</p></div></div>            
           </li>
           <li class="program__item">
             <h4 class="program__item__semester">2 SEMESTER</h4>
-            <h5 class="program__item__resource">Grammar</h5>
-            <p class="program__item__details">Pronouns </br> Active Voice </br> Passive Voice</p>            
-            <h5 class="program__item__resource">Vocabulary</h5>
-            <p class="program__item__details">Home </br> School </br> Work </br></p>            
+            <div class="program__item__description">
+              <div class="program__item__resource">
+            <h5 class="program__item__title">Grammar</h5>
+            <p class="program__item__details">Pronouns </br> Active Voice </br> Passive Voice</p></div> 
+            <div class="program__item__resource">           
+            <h5 class="program__item__title">Vocabulary</h5>
+            <p class="program__item__details">Home </br> School </br> Work </br></p></div></div>            
           </li>
           <li class="program__item">
             <h4 class="program__item__semester">3 SEMESTER</h4>
-            <h5 class="program__item__resource">Grammar</h5>
-            <p class="program__item__details">Modal verbs </br> Infinitive </br> Gerund </br> Participle: 1, 2</p>            
-            <h5 class="program__item__resource">Vocabulary</h5>
-            <p class="program__item__details">Travel & Tourism </br> Culture & Free Time </br> Sport</p>            
-            <h5 class="program__item__resource">Writing</h5>
-            <p class="program__item__details">Informal Letter</p>
+            <div class="program__item__description">
+              <div class="program__item__resource">
+            <h5 class="program__item__title">Grammar</h5>
+            <p class="program__item__details">Modal verbs </br> Infinitive </br> Gerund </br> Participle: 1, 2</p></div>
+            <div class="program__item__resource">            
+            <h5 class="program__item__title">Vocabulary</h5>
+            <p class="program__item__details">Travel & Tourism </br> Culture & Free Time </br> Sport</p></div>
+            <div class="program__item__resource">            
+            <h5 class="program__item__title">Writing</h5>
+            <p class="program__item__details">Informal Letter</p></div></div>
           </li>
           <li class="program__item">
             <h4 class="program__item__semester">4 SEMESTER</h4>
-            <h5 class="program__item__resource">Grammar</h5>
+            <div class="program__item__description">
+              <div class="program__item__resource">
+            <h5 class="program__item__title">Grammar</h5>
             <p class="program__item__details">
               Clauses: Conditional and Wishes </br>Direct / Reported speech </br>Preposition </br> Conjunction</br>Numeral
-            </p>            
-            <h5 class="program__item__resource">Vocabulary</h5>
-            <p class="program__item__details">Healthy living </br>Nature & Enviroment </br>Money</p>            
-            <h5 class="program__item__resource">Writing</h5>
-            <p class="program__item__details">Formal letter</p>
+            </p></div>
+            <div class="program__item__resource">            
+            <h5 class="program__item__title">Vocabulary</h5>
+            <p class="program__item__details">Healthy living </br>Nature & Enviroment </br>Money</p></div>
+            <div class="program__item__resource">            
+            <h5 class="program__item__title">Writing</h5>
+            <p class="program__item__details">Formal letter</p></div></div>
           </li>
           <li class="program__item">
             <h4 class="program__item__semester">5 SEMESTER</h4>
-            <h5 class="program__item__resource"></h5>
-            <p class="program__item__details--image">Revision Tests</p>
+            <div class="program__item__description">
+              <div class="program__item__resource">
+            <h5 class="program__item__title"></h5>
+            <p class="program__item__details--image">Revision Tests</p></div></div>
           </li>
         </ul>
       </div>
