--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,19 +2,34 @@
   <div class="hero__wave">
     <div class="container">
       <div class="hero">
-        <h1 class="hero__title">Complex preparation for English UPE</h1>
-        <div class="hero__warnings">
-          <p class="hero__warnings--gray">It won't be easy.</p>
-          <p>But you're guaranteed to get</p>
-          <p class="hero__warnings--orange">+25 points</p>
+        <div class="hero__texts">
+          <h1 class="hero__title">Complex preparation for English UPE</h1>
+          <div class="hero__warnings">
+            <p class="hero__warnings--gray">It won't be easy.</p>
+            <p>But you're guaranteed to get</p>
+            <p class="hero__warnings--orange">+25 points</p>
+          </div>
+          <a href="#contacts" class="hero__button">I want a free lesson</a>
         </div>
-        <a href="#contacts" class="hero__button">I want a free lesson</a>
         <div class="hero__image">
-          <img
-            class="image__main"
-            src="./images/hero_mobile.png"
-            alt="our teacher with students"
-          />
+          <picture>
+            <source
+              srcset="
+                ./images/hero_mobile.png    1x,
+                ./images/hero_mobile_2x.png 2x
+              "
+              media="(max-width: 767px)" />
+            <source
+              srcset="
+                ./images/hero_tablet.png    1x,
+                ./images/hero_tablet_2x.png 2x
+              "
+              media="(min-width: 768px) and (max-width:1279px)" />
+            <img
+              class="image__main"
+              src="./images/hero_mobile.png"
+              alt="our teacher with students"
+          /></picture>
         </div>
       </div>
     </div>
