--- a/src/sass/_advantages.scss
+++ b/src/sass/_advantages.scss
@@ -2,50 +2,80 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.advantages__title {
-  display: none;
-}
-.advantages__list {
-  padding-left: 5em;
-  padding-right: 0.5em;
-}
-
-.advantages__item:not(:last-child) {
-  padding-bottom: 2.5em;
-}
-
-.advantages__text {
-  max-width: 75%;
-  position: relative;
-  word-wrap: break-word;
-  font-size: 0.875em;
-  font-weight: getFontWeight('font-bold');
-  color: currentColor;
-  line-height: 1.5;
-  letter-spacing: 0.08em;
-  &::before {
-    content: '';
-    position: absolute;
-    background-image: url(../images/icons/female_icon.svg);
-    background-size: contain;
-    display: inline-block;
-    width: 58px;
-    height: 60px;
-    top: -0.5em;
-    left: -5em;
+  &__title {
+    display: none;
   }
-  &--teaching {
-    @extend .advantages__text;
+  &__list {
+    padding-left: 5em;
+    padding-right: 0.5em;
+  }
+  &__item:not(:last-child) {
+    padding-bottom: 2.5em;
+  }
+  &__text {
+    max-width: 75%;
+    position: relative;
+    word-wrap: break-word;
+    font-size: 0.875em;
+    font-weight: getFontWeight('font-bold');
+    color: currentColor;
+    line-height: 1.5;
+    letter-spacing: 0.08em;
     &::before {
-      background-image: url(../images/icons/teaching_icon.svg);
+      content: '';
+      position: absolute;
+      background-image: url(../images/icons/female_icon.svg);
+      background-size: contain;
+      display: inline-block;
+      width: 58px;
+      height: 60px;
+      top: -0.5em;
+      left: -5em;
+    }
+    &--teaching {
+      @extend .advantages__text;
+      &::before {
+        background-image: url(../images/icons/teaching_icon.svg);
+      }
+    }
+    &--guarantee {
+      @extend .advantages__text;
+      &::before {
+        background-image: url(../images/icons/guarantee_icon.svg);
+        top: -0.5em;
+      }
     }
   }
-  &--guarantee {
-    @extend .advantages__text;
-    &::before {
-      background-image: url(../images/icons/guarantee_icon.svg);
-      top: -0.5em;
+}
+@media screen and (min-width: 768px) {
+  .advantages {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: center;
+    &__list {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      padding-left: 4.7em;
+      padding-right: 0em;
+    }
+    &__item:not(:last-child) {
+      padding-bottom: 0em;
+      padding-right: 1.5em;
+    }
+    &__text {
+      max-width: 70%;
+      word-wrap: normal;
+      &::before {
+        top: 0em;
+        left: -5.5em;
+      }
+      &--guarantee {
+        &::before {
+          top: 0em;
+        }
+      }
     }
   }
 }
