--- a/src/sass/_program.scss
+++ b/src/sass/_program.scss
@@ -1,86 +1,151 @@
 .section--program {
   padding-bottom: 0em;
 }
-.program__background {
-  padding-top: 3.125em;
-  background-color: getColor('black');
-}
 .program {
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-.program__item {
-  position: relative;
-}
-.program__item:not(:last-child) {
-  padding-bottom: 2.35em;
-  &::before {
-    content: '';
-    position: absolute;
-    width: 0.1em;
-    height: 98%;
-    background-color: getColor('primary-gray');
-    top: 1.1em;
-    left: -0.075em;
+  &__list {
+    padding-left: 4.625em;
+  }
+  &__item {
+    position: relative;
+    &:not(:last-child) {
+      padding-bottom: 2.35em;
+      &::before {
+        content: '';
+        position: absolute;
+        width: 0.1em;
+        height: 98%;
+        background-color: getColor('primary-gray');
+        top: 1.1em;
+        left: -0.075em;
+      }
+    }
+    &__semester {
+      margin-left: -0.4em;
+      font-size: 0.875em;
+      font-weight: getFontWeight('font-bold');
+      letter-spacing: 0.05em;
+      color: getColor('background-white');
+      &::before {
+        content: '';
+        background-image: url(../images/icons/Ellipse3.svg);
+        display: inline-block;
+        z-index: 5;
+        margin-right: 1.6em;
+        width: 12px;
+        height: 12px;
+      }
+    }
+    &__resource {
+      padding-left: 2.2em;
+      margin-top: 0.6em;
+      margin-bottom: 0.6em;
+    }
+    &__title {
+      margin-bottom: 0.5em;
+      font-size: 0.75em;
+      letter-spacing: 0.06em;
+      color: getColor('brand-color');
+      &::before {
+        content: '\2014';
+        color: currentColor;
+        display: inline;
+        margin-right: 0.5em;
+      }
+    }
+    &__details {
+      font-size: 0.75em;
+      word-wrap: break-word;
+      font-weight: getFontWeight('font-medium');
+      letter-spacing: 0.06em;
+      color: getColor('primary-gray');
+      &--image {
+        @extend .program__item__details;
+        position: relative;
+        padding-right: 10em;
+        &::after {
+          content: '';
+          background-image: url(../images/program_picture_clipped_mobile.png);
+          background-size: contain;
+          background-repeat: no-repeat;
+          display: inline-block;
+          position: absolute;
+          top: 0em;
+          right: -6.2em;
+          width: 176px;
+          height: 137px;
+        }
+      }
+    }
+  }
+  &__background {
+    padding-top: 3.125em;
+    background-color: getColor('black');
+  }
+  &__title {
+    font-size: 1.25em;
+    font-weight: getFontWeight('font-extrabold');
+    letter-spacing: 0.03em;
+    color: getColor('background-white');
+    padding-bottom: 1.8em;
   }
 }
-.program__title {
-  color: getColor('background-white');
-  padding-bottom: 1.8em;
-}
-.program__item__semester {
-  margin-left: -0.4em;
-  font-size: 0.875em;
-  font-weight: getFontWeight('font-bold');
-  letter-spacing: 0.05em;
-  color: getColor('background-white');
-  &::before {
-    content: '';
-    background-image: url(../images/icons/Ellipse3.svg);
-    display: inline-block;
-    z-index: 5;
-    margin-right: 1.625em;
-    width: 12px;
-    height: 12px;
-  }
-}
-.program__item__resource {
-  padding-left: 2.2em;
-  margin-top: 0.6em;
-  margin-bottom: 0.6em;
-  font-size: 0.75em;
-  letter-spacing: 0.06em;
-  color: getColor('brand-color');
-  &::before {
-    content: '\2014';
-    color: currentColor;
-    display: inline;
-    margin-right: 0.5em;
-  }
-}
-.program__item__details {
-  padding-left: 2.2em;
-  font-size: 0.75em;
-  word-wrap: break-word;
-  font-weight: getFontWeight('font-medium');
-  letter-spacing: 0.06em;
-  color: getColor('primary-gray');
-}
-.program__item__details--image {
-  @extend .program__item__details;
-  position: relative;
-  &::after {
-    content: '';
-    background-image: url(../images/program_picture_clipped_mobile.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-clip: border-box;
-    display: inline-block;
-    position: absolute;
-    top: 0em;
-    right: -7.5em;
-    width: 176px;
-    height: 137px;
+@media screen and (min-width: 768px) {
+  .program {
+    align-items: flex-start;
+    &__list {
+      padding-left: 4.2em;
+    }
+    &__item {
+      &:not(:last-child) {
+        padding-bottom: 1.875em;
+      }
+      &__semester {
+        letter-spacing: 0.07em;
+        &::before {
+          margin-right: 3.125em;
+        }
+      }
+      &__description {
+        padding-left: 1.75em;
+        display: flex;
+        flex-direction: row;
+      }
+
+      &__resource {
+        display: flex;
+        flex-direction: column;
+        padding-left: 3em;
+        margin-top: 0.6em;
+        margin-bottom: 0.6em;
+        flex-basis: 11em;
+        &:first-child {
+          padding-left: 1.6em;
+        }
+      }
+      &__details {
+        &--image {
+          padding-right: 10em;
+          &::after {
+            content: '';
+            background-image: url(../images/program_picture_clipped_tablet.png);
+            top: -10em;
+            right: -38em;
+            width: 384px;
+            height: 280px;
+          }
+        }
+      }
+    }
+    &__background {
+      padding-top: 3.2em;
+    }
+    &__title {
+      font-size: 1.625em;
+      letter-spacing: 0.05em;
+      padding-bottom: 2em;
+    }
   }
 }
