--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -3,69 +3,104 @@
   flex-direction: column;
   align-items: center;
   padding: 3.1em 1.25em;
-}
-.contacts__background {
-  width: 100%;
-  background-image: url(../images/contact_image_mobile.jpg);
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-.contacts__background__color {
-  width: 100%;
-  background-color: rgba(17, 21, 24, 0.8);
-}
-.contacts__title {
-  margin-bottom: 3.25em;
-  font-size: 0.875em;
-  font-weight: getFontWeight('font-extrabold');
-  line-height: 1.3;
-  letter-spacing: 0.05em;
-  text-align: center;
-  color: getColor('background-white');
-  &--accent {
-    color: getColor('brand-color');
+  &__background {
+    width: 100%;
+    background-image: url(../images/contact_image_mobile.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    &__color {
+      width: 100%;
+      background-color: rgba(17, 21, 24, 0.8);
+    }
   }
-}
-.contacts__description {
-  margin-bottom: 2.5em;
-  font-size: 0.75em;
-  font-weight: getFontWeight('font-semibold');
-  letter-spacing: 0.1em;
-  line-height: 1.3;
-  text-align: center;
-  color: getColor('background-white');
-  &--accent {
-    color: getColor('brand-color');
+  &__title {
+    margin-bottom: 3.25em;
+    font-size: 0.875em;
+    font-weight: getFontWeight('font-extrabold');
+    line-height: 1.3;
+    letter-spacing: 0.05em;
+    text-align: center;
+    color: getColor('background-white');
+    &--accent {
+      color: getColor('brand-color');
+    }
   }
-}
-.contacts__inputs {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100vw;
-  margin-bottom: 2em;
-}
-.contacts__input {
-  padding: 0.8em 1em;
-  margin-bottom: 1.25em;
-  width: 85%;
-  font-size: 0.875em;
-  font-weight: getFontWeight('font-medium');
-  letter-spacing: 0.05em;
-  color: getColor('background-white');
-  background-color: transparent;
-  border: 0.1em solid getColor('background-white');
-  &::placeholder {
+  &__description {
+    margin-bottom: 2.5em;
+    font-size: 0.75em;
+    font-weight: getFontWeight('font-semibold');
+    letter-spacing: 0.1em;
+    line-height: 1.3;
+    text-align: center;
+    color: getColor('background-white');
+    &--accent {
+      color: getColor('brand-color');
+    }
+  }
+  &__inputs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    margin-bottom: 2em;
+  }
+  &__input {
+    padding: 0.8em 1em;
+    margin-bottom: 1.25em;
+    width: 85%;
     font-size: 0.875em;
     font-weight: getFontWeight('font-medium');
     letter-spacing: 0.05em;
-    color: getColor('primary-gray');
+    color: getColor('background-white');
+    background-color: transparent;
+    border: 0.1em solid getColor('background-white');
+    &::placeholder {
+      font-size: 0.875em;
+      font-weight: getFontWeight('font-medium');
+      letter-spacing: 0.05em;
+      color: getColor('primary-gray');
+    }
+    &:not(:placeholder-shown):required:valid {
+      border-color: getColor('primary-gray');
+    }
+    &:not(:placeholder-shown):required:invalid {
+      border-color: getColor('brand-color');
+    }
   }
-  &:not(:placeholder-shown):required:valid {
-    border-color: getColor('primary-gray');
-  }
-  &:not(:placeholder-shown):required:invalid {
-    border-color: getColor('brand-color');
+}
+@media screen and (min-width: 768px) {
+  .contacts {
+    padding: 3.1em;
+    &__background {
+      width: 100%;
+      background-image: url(../images/contact_image_tablet.jpg);
+    }
+    &__title {
+      margin-bottom: 1.15em;
+      font-size: 1.675em;
+      max-width: 80%;
+    }
+    &__description {
+      margin-bottom: 1.7em;
+      font-size: 0.875em;
+      letter-spacing: 0.07em;
+      max-width: 70%;
+    }
+    &__inputs {
+      width: 50vw;
+      margin-bottom: 1em;
+    }
+    &__input {
+      padding: 1.1em 2em;
+      margin-bottom: 1.5em;
+      width: 95%;
+      font-weight: getFontWeight('font-semibold');
+      letter-spacing: 0.07em;
+      &::placeholder {
+        font-weight: getFontWeight('font-semibold');
+        letter-spacing: 0.07em;
+      }
+    }
   }
 }
 .hero__button--contacts {
@@ -73,4 +108,9 @@
   margin-right: auto;
   margin-left: auto;
   padding: 1.25em 2.5em;
+}
+@media screen and (min-width: 768px) {
+  .hero__button--contacts {
+    padding: 1.25em 3.5em;
+  }
 }
