--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -5,47 +5,107 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  &__title {
+    display: none;
+  }
+  &__data {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  &__logo {
+    margin-bottom: 1.5em;
+  }
+  &__background {
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    padding: 1.5em;
+    background-color: getColor('black');
+  }
+  &__copyright {
+    font-size: 0.875em;
+    color: getColor('primary-gray');
+  }
 }
-.footer__title {
-  display: none;
-}
-.footer__logo {
-  margin-bottom: 1.5em;
+@media screen and (min-width: 768px) {
+  .footer {
+    justify-content: center;
+    &__data {
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 2.5em;
+    }
+    &__logo {
+      margin-bottom: 0em;
+      margin-right: 18.5em;
+    }
+    &__background {
+      justify-content: flex-start;
+      padding: 1.4em 2.6em;
+    }
+  }
 }
 .address {
   @extend .footer;
   margin-bottom: 3.25em;
+  &__phone {
+    position: relative;
+    margin-bottom: 2em;
+    font-size: 0.875em;
+    font-weight: getFontWeight('font-semibold');
+    font-style: normal;
+    letter-spacing: 0.1em;
+    text-decoration: none;
+    color: getColor('black');
+    @include transition(font-size);
+    &::before {
+      content: '';
+      background-image: url(../images/icons/phone.svg);
+      display: inline-block;
+      position: absolute;
+      top: 0.25em;
+      left: -2.2em;
+      width: 20px;
+      height: 20px;
+      color: getColor('brand-color');
+      @include transition(transform);
+    }
+    &:focus,
+    &:hover {
+      font-size: 1em;
+      color: getColor('brand-color');
+    }
+    &:focus::before,
+    &:hover::before {
+      transform: rotate(180deg);
+    }
+  }
 }
-.address__phone {
-  position: relative;
-  margin-bottom: 2em;
-  font-size: 0.875em;
-  font-weight: getFontWeight('font-semibold');
-  font-style: normal;
-  letter-spacing: 0.1em;
-  text-decoration: none;
-  color: getColor('black');
-  transition: font-size 500ms ease-in-out;
-  &::before {
-    content: '';
-    background-image: url(../images/icons/phone.svg);
-    display: inline-block;
-    position: absolute;
-    top: 0.25em;
-    left: -2.2em;
-    width: 20px;
-    height: 20px;
-    color: getColor('brand-color');
-    transition: transform 500ms ease-in-out;
-  }
-  &:focus,
-  &:hover {
-    font-size: 1em;
-    color: getColor('brand-color');
-  }
-  &:focus::before,
-  &:hover::before {
-    transform: rotate(180deg);
+@media screen and (min-width: 768px) {
+  .address {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin-bottom: 0em;
+    &__phone {
+      margin-bottom: 0em;
+      padding-right: 1.2em;
+      font-size: 1.25em;
+      border-right: 0.1em solid getColor('primary-gray');
+      &::before {
+        background-size: cover;
+        top: 0.35em;
+        left: -2em;
+        width: 24px;
+        height: 24px;
+      }
+      &:focus,
+      &:hover {
+        font-size: 1.35em;
+      }
+    }
   }
 }
 .social__logo {
@@ -57,14 +117,8 @@
   background-size: contain;
   background-repeat: no-repeat;
 }
-.footer__background {
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  padding: 1.5em;
-  background-color: getColor('black');
-}
-.footer__copyright {
-  font-size: 0.875em;
-  color: getColor('primary-gray');
+@media screen and (min-width: 768px) {
+  .social__logo {
+    margin-left: 1.5em;
+  }
 }
